--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react": "^16.9.0",
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "react-test-renderer": "^16.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
